--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Birds'
 - !lcc 'QL'
+- GITenberg
 title: "Bird Neighbors\r\nAn Introductory Acquaintance with One Hundred and Fifty\
   \ Birds Commonly Found in the Gardens, Meadows, and Woods About Our Homes"
 url: http://www.gutenberg.org/ebooks/37735
